log
Wed Oct 14 19:24:21 UTC 2020: 
 sudoku.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:24: error: ‘Lista’ undeclared (first use in this function); did you mean ‘List’?
               pushBack(Lista, nuevo);
                        ^~~~~
                        List
sudoku.c:60:24: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:64:18: error: ‘lista’ undeclared (first use in this function); did you mean ‘Lista’?
           return lista;
                  ^~~~~
                  Lista
Compilation failed
Wed Oct 14 19:24:42 UTC 2020: 
 sudoku.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
2e79094
Thu Oct 15 16:36:08 UTC 2020: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  0|0
b338666
Thu Oct 15 16:49:01 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
f67f864
Fri Oct 16 14:12:45 UTC 2020: 
 sudoku.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  0|0
22da860
Fri Oct 16 14:15:42 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
fada8bd
Fri Oct 16 17:43:00 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|3
total_score: 25/70
df19336
Fri Oct 16 19:11:09 UTC 2020: 
 sudoku.c | 25 ++++++++++++-------------
 1 file changed, 12 insertions(+), 13 deletions(-)
 tests:  1|4
total_score: 10/70
28a6c9c
Fri Oct 16 19:13:27 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
2de13b3
Fri Oct 16 19:13:45 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
1e0a0bd
Fri Oct 16 19:13:50 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
98b79f7
